--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,13 +1,13 @@
 /******* Customized Bootstrap ********/
 
-$primary: #6244C5;
-$secondary: #FFC448;
-$light: #FAFAFB;
-$dark: #12141D;
+$primary: #6244c5;
+$secondary: #ffc448;
+$light: #fafafb;
+$dark: #12141d;
 
-$font-family-base: 'Open Sans', sans-serif;
+$font-family-base: "Open Sans", sans-serif;
 
-$body-color: #5A5A5A;
+$body-color: #5a5a5a;
 
 $headings-color: $dark;
 
