--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,7 +1,7 @@
 /******* Customized Bootstrap ********/
 
-$primary: #6244c5;
-$secondary: #ffc448;
+$primary: #00854a;
+$secondary: #113c64;
 $light: #fafafb;
 $dark: #12141d;
 
